fix: flipped layout bugs in smaller width
- remove min-width constraint in max-with 1024px

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -205,7 +205,7 @@ article {
     }
 }
 
-@media only screen and (max-width: 1024px) and (min-width: 769px) {
+@media only screen and (max-width: 1024px) {
     .home-intro {
         flex-direction: column;
         padding: 40px 0 0;
@@ -232,5 +232,9 @@ article {
     }
     .home-intro .home-intro-left div {
         height: 420px;
+    }
+    .home-intro .home-intro-right {
+        max-width: 100%;
+        order: -1;
     }
 }
